# smbus2

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-build-test.yml
doc/: Makefile  conf.py
smbus2/: __init__.py  smbus2.py  smbus2.pyi
tests/: test_datatypes.py  test_smbus2.py
